More consistent sizes for module toolbars and footers. - Standardize on 36px - Remove forced padding; should be enough to just center content. - Shared styling for switch containers to avoid layout and clipping issues. - Minor CSS cleanup.
PiperOrigin-RevId: 407120616

--- a/lit_nlp/client/modules/generated_text_module.css
+++ b/lit_nlp/client/modules/generated_text_module.css
@@ -6,16 +6,6 @@
   cursor: pointer;
 }
 
-.switch-container {
-  display: flex;
-  align-items: center;
-}
-
-.switch-container > mwc-switch {
-  margin-left: 4px;
-  margin-right: 4px;
-}
-
 .switch-container-disabled {
   color: rgba(60, 64, 67, 0.38);
 }
